# wearless_studio

./: .env.example  .gitignore  .prettierrc  CONTEXT.md  DESIGN.md  README.md  agents.md  claude.md  index.html  package.json  pnpm-lock.yaml  progress.txt  tsconfig.json  vite.config.js
server/: .dockerignore  .env.example  Dockerfile  docker-compose.yml  pyproject.toml  railway.json  requirements.txt  seed_phase4.py
server/app/: auth.py  config.py  credits.py  cx_identity.py  db.py  facemarket.py  facemarket_chain.py  main.py  models.py  personalization.py  personalization_qc.py  r2.py  repo.py  routes.py
server/prompts/: analysis_v1.txt  copy_qc_v1.txt  copywriter_v1.txt  cut_generate_v1.txt  cut_vary_v1.txt  feature_extractor_v1.txt  garment_pick_v1.txt  image_qc_v1.txt  mannequin_adjust_v1.txt  mannequin_fit_qc_v1.txt  mannequin_generate_v1.ko.txt  mannequin_generate_v1.txt  product_analyst_v1.txt  scene_qc_v1.txt
server/scripts/: _env.py  dump_prompt.py  embed_corpus.py  eval_axis_fidelity.py  eval_axis_reflection.py  eval_refimages.py  fit_fidelity_campaign.py  fix_ghost_credits.py  gen_axis_pair.py  goldenset_clothing_types.py  goldenset_judge_calibrate.py  goldenset_seed.py  grant_smoke_credits.py  migrate_face_objects_to_private_bucket.py  prove_mannequin_axis_qc_retry.py  qc_calibrate.py  retry_pending_face_vcs.py  seed_matching.py  seed_ref_images.py  seed_virtual_models.py  smoke_analysis.py  smoke_cut.py  smoke_mannequin.py  smoke_mannequin_fit_grid.py  smoke_matching_skirt.py  smoke_realwire.py  spike_outer_edit_retry.py  verify_analysis_db.py
server/seed/: matching_items.json
server/tests/: conftest.py  test_analysis_agent.py  test_analyze.py  test_analyze_route.py  test_asset_file.py  test_auth.py  test_copy_qc.py  test_copywriter.py  test_credits.py  test_cut_generator.py  test_cut_identity_fallback.py  test_cuts.py  test_detail_page.py  test_detail_page_identity_source.py  test_detail_page_license_face.py  test_dispatcher_wake.py  test_editor_image.py  test_embeddings.py  test_eval_axis_fidelity.py  test_eval_axis_reflection.py  test_eval_refimages.py  test_face_grid.py  test_face_qc.py  test_facemarket_identity.py  test_facemarket_licenses.py  test_facemarket_seller_loop.py  test_facemarket_settlement.py  (+37 more)
(+368 files in other folders)
