[project]
name = "wearless-studio-api"
version = "0.1.0"
description = "Wearless Studio API — FastAPI (Railway)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pyjwt[crypto]>=2.10",
    "psycopg[binary]>=3.2",
    "psycopg-pool>=3.2",
    "boto3>=1.35",
    "httpx>=0.28",
    "pillow>=10",
    "python-multipart>=0.0.9",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "httpx>=0.28",
]
