[project]
name = "wearless-studio-api"
version = "0.1.0"
description = "Wearless Studio API — FastAPI (AWS ECS Fargate)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pyjwt[crypto]>=2.10",
    "psycopg[binary]>=3.2",
    "psycopg-pool>=3.2",
    "boto3>=1.35",
    "httpx>=0.28",
    "pillow>=10",
    "python-multipart>=0.0.9",
    "web3>=7.16.0",
    # 실존 모델 얼굴 대조 QC — SFace(임베딩)+YuNet(검출), Apache-2.0. headless=libGL 불필요.
    "opencv-contrib-python-headless>=4.9,<5",
    "numpy>=1.26",
]

[project.optional-dependencies]
# 검색 증강 Phase 3(retrieval_upgrade_prd) 자체 호스팅 임베딩. prod 기본 이미지 미포함(R3 완화) —
# 오프라인 배치/로컬에서만 설치. torch=CPU/MPS 추론(GPU 불요). SigLIP=이미지, bge-m3=텍스트(2b).
embeddings = [
    "torch>=2.2",
    "torchvision>=0.17",   # SigLIP fast image processor(AutoImageProcessor) 백엔드
    "transformers>=4.44",
    "sentence-transformers>=3.0",
    "sentencepiece>=0.2",  # bge-m3(텍스트 2b) 토크나이저
]

[dependency-groups]
dev = [
    "pytest>=8",
    "httpx>=0.28",
]
